# electromanfer-dev

./: .dockerignore  .env.save  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 09ed1cc9085d_add_notas_and_observaciones_pdf_to_.py  0aa2f651838b_add_cedula_ciudadania_to_usuarios.py  1f13ad11ea8e_refactor_firmas_remove_archivo_.py  247269bf6e74_rename_firmas_archivo_to_url.py  2940d3dee5ca_crear_estructura_cotizaciones_y_.py  30b13c748ce7_remove_activo_and_orden_from_productos_.py  352a10bd2d99_add_firma_id_to_usuarios_remove_usuario_.py  36f57439bc43_add_guias_module.py  3fa0651e20b6_add_origen_to_productos.py  41c53ab7e680_add_firmas_table.py  4fae3a1ec4b5_remove_activo_from_productos.py  5a9351906486_add_por_iva_to_cotizaciones_items.py  5d13b5877c2c_schema_completo.py  6430ef3b19f5_init.py  6580fc3b7e45_remove_iva_from_cotizaciones_and_items.py  7b945fd03e6c_add_por_iva_to_productos.py  b3caf9e99c79_remove_activa_from_firmas.py  b649a638bd30_add_email_thread_id_to_cotizaciones.py  c13df048c509_add_seleccionada_to_productos_multimedia.py  c883a1c5f5bb_remove_orden_metadata_snapshot_.py  d3f2df7a459c_add_imagenes_urls_fichas_urls_jsonb_to_.py  e3e24532f82c_clean_cotizaciones_models.py  e60ebae7dda5_init_clean_v2.py  e98615b3aee6_add_usuario_id_to_firmas.py  e9e3dd5b3899_add_session_token_to_usuarios.py
backend/app/: enums.py  main.py  scheduler.py
backend/app/core/: config.py  db.py  security.py
(+173 files in other folders)
