[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "alembic>=1.18.4",
    "apscheduler==3.10.4",
    "bcrypt==4.0.1",
    "fastapi>=0.135.2",
    "httpx>=0.28.1",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "pydantic[email]>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.22",
    "requests>=2.33.0",
    "uvicorn>=0.42.0",
    "sib-api-v3-sdk>=7.6.0",
    "logging>=0.4.9.6",
    "psycopg[binary]>=3.3.3",
    "google-auth>=2.50.0",
    "google-auth-oauthlib>=1.3.1",
    "google-auth-httplib2>=0.3.1",
    "google-api-python-client>=2.195.0",
    "cffi>=2.0.0",
    "cryptography>=47.0.0",
]
